--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,11 @@ body, .app {
   flex: 1;
 }
 
+.book-cover {
+  width: 128px;
+  height: 193px;
+}
+
 .bookshelf {
   padding: 0 10px 20px;
 }
@@ -53,7 +58,7 @@ body, .app {
   bottom: 25px;
 }
 
-.open-search button {
+.open-search a {
   display: block;
   width: 50px;
   height: 50px;
@@ -195,4 +200,9 @@ button:active {
   padding: 20px 10px 0;
   text-align: center;
   font-size: 0.8em;
+}
+
+#errmsg{
+  color: crimson;
+  text-align: center;
 }
